# skin_detect

./: CMakeLists.txt  README.md
export/: export.h
inc/: skin_detect_process.h  utils.h
src/: skin_detect_process.cpp
test/: skin_test.cpp
utils/: utils.cpp
